fixed desktop button alignment

--- a/src/styles/LandingPageStyles/index.less
+++ b/src/styles/LandingPageStyles/index.less
@@ -27,11 +27,13 @@
 }
 
   .browse-btn {
-    padding: 2%;
+    padding: 0%;
+    margin: 0% 10%
   }
 
   .support-us-btn {
-    padding: 2%;
+    padding: 0%;
+    margin: 0% 10%
   }
 
 
@@ -39,14 +41,13 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 10%;
-    margin-bottom: 2%;
+    margin-top: 2%;
+    margin-bottom: 10%;
   }
 
   .btn {
     cursor: pointer;
     height: 3rem;
-    margin-right: 1rem;
     color: black;
     background: #f26602;
     border: none;
